public/css/tailwind.css
/* ... */
/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/

img,
video {
  max-width: 100%;
  height: auto;
}

/*
Ensure the default browser behavior of the `hidden` attribute.
*/

[hidden] {
  display: none;
}

*, ::before, ::after {
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
}

html {
  --tw-text-opacity: 1;
  color: rgb(82 82 87 / var(--tw-text-opacity));
}

h1 {
  margin-bottom: 2.5rem;
  font-size: 48px;
  line-height: 1.167em;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgb(9 9 16 / var(--tw-text-opacity));
}

h2 {
  margin-bottom: 2rem;
  font-size: 36px;
  line-height: 1.333em;
  --tw-text-opacity: 1;
  color: rgb(9 9 16 / var(--tw-text-opacity));
}

h3 {
  margin-bottom: 1.5rem;
  font-size: 24px;
  line-height: 1.333em;
  --tw-text-opacity: 1;
  color: rgb(9 9 16 / var(--tw-text-opacity));
}

h4 {
  margin-bottom: 1rem;
  font-size: 18px;
  line-height: 1.333em;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgb(9 9 16 / var(--tw-text-opacity));
}

p {
  margin-bottom: 0.75rem;
  font-size: 16px;
  line-height: 1.5em;
}

span.meta {
  margin-bottom: 0.75rem;
  font-size: 12px;
  line-height: 2em;
  letter-spacing: .12em;
  font-weight: 600;
  text-transform: uppercase;
  --tw-text-opacity: 1;
  color: rgb(132 132 135 / var(--tw-text-opacity));
}

nav {
  font-size: 16px;
  line-height: 1.5em;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgb(9 9 16 / var(--tw-text-opacity));
}

footer {
  font-size: 14px;
  line-height: 1.714em;
}

a:hover {
  --tw-text-opacity: 1;
  color: rgb(82 82 87 / var(--tw-text-opacity));
}

.container {
  width: 100%;
}

@media (min-width: 640px) {

  .container {
    max-width: 640px;
  }
}

@media (min-width: 768px) {

  .container {
    max-width: 768px;
  }
}

@media (min-width: 1024px) {

  .container {
    max-width: 1024px;
  }
}

@media (min-width: 1280px) {

  .container {
    max-width: 1280px;
  }
}

@media (min-width: 1536px) {

  .container {
    max-width: 1536px;
  }
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.left-1\/2 {
  left: 50%;
}

.right-0 {
  right: 0px;
}

.bottom-0 {
  bottom: 0px;
}

.z-\[999\] {
  z-index: 999;
}

.z-\[-1\] {
  z-index: -1;
}

.-z-10 {
  z-index: -10;
}

.-mx-6 {
  margin-left: -1.5rem;
  margin-right: -1.5rem;
}

.my-6 {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.-mx-10 {
  margin-left: -2.5rem;
  margin-right: -2.5rem;
}

.mx-1 {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.my-auto {
  margin-top: auto;
  margin-bottom: auto;
}

.ml-auto {
  margin-left: auto;
}

.mt-10 {
  margin-top: 2.5rem;
}

.mb-auto {
  margin-bottom: auto;
}

.mt-\[14\.5rem\] {
  margin-top: 14.5rem;
}

.-mt-48 {
  margin-top: -12rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mb-0 {
  margin-bottom: 0px;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mb-20 {
  margin-bottom: 5rem;
}

.mb-16 {
  margin-bottom: 4rem;
}

.ml-\[-50vw\] {
  margin-left: -50vw;
}

.mb-\[6\.5rem\] {
  margin-bottom: 6.5rem;
}

.ml-96 {
  margin-left: 24rem;
}

.mt-48 {
  margin-top: 12rem;
}

.mb-\[\.3rem\] {
  margin-bottom: .3rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mb-40 {
  margin-bottom: 10rem;
}

.mb-48 {
  margin-bottom: 12rem;
}

.block {
  display: block;
}

.flex {
  display: flex;
}

.aspect-square {
  aspect-ratio: 1 / 1;
}

.h-screen {
  height: 100vh;
}

.h-16 {
  height: 4rem;
}

.h-\[8rem\] {
  height: 8rem;
}

.h-full {
  height: 100%;
}

.h-auto {
  height: auto;
}

.h-\[calc\(100\%\+2\.5rem\+5rem\)\] {
  height: calc(100% + 2.5rem + 5rem);
}

.h-52 {
  height: 13rem;
}

.h-12 {
  height: 3rem;
}

.h-64 {
  height: 16rem;
}

.h-40 {
  height: 10rem;
}

.h-\[calc\(100\%\+13rem\+7\.5rem\)\] {
  height: calc(100% + 13rem + 7.5rem);
}

.max-h-full {
  max-height: 100%;
}

.max-h-\[66\%\] {
  max-height: 66%;
}

.w-5\/6 {
  width: 83.333333%;
}

.w-full {
  width: 100%;
}

.\!w-11\/12 {
  width: 91.666667% !important;
}

.w-\[100vw\] {
  width: 100vw;
}

.w-1\/2 {
  width: 50%;
}

.w-2\/3 {
  width: 66.666667%;
}

.w-1\/3 {
  width: 33.333333%;
}

.w-96 {
  width: 24rem;
}

.w-\[36rem\] {
  width: 36rem;
}

.w-7\/12 {
  width: 58.333333%;
}

.w-12 {
  width: 3rem;
}

.max-w-\[66\%\] {
  max-width: 66%;
}

.grow {
  flex-grow: 1;
}

.-translate-y-10 {
  --tw-translate-y: -2.5rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.translate-y-10 {
  --tw-translate-y: 2.5rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
/* ... */

